--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "firebase": "^6.0.2",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
+    "typescript-collections": "^1.3.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
